# flake8-broken-line

./: .editorconfig  .travis.yml  CHANGELOG.md  README.md  flake8_broken_line.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
tests/: test_line_breaks.py  test_version.py
tests/fixtures/: correct.py  incorrect.py
