[tool.poetry]
name = "flake8-broken-line"
version = "0.6.0"
description = "Flake8 plugin to forbid backslashes for line breaks"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/flake8-broken-line"
homepage = "https://github.com/wemake-services/flake8-broken-line"

keywords = [
  "flake8",
  "flake8-plugin",
  "linting",
  "linter",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.plugins."flake8.extension"]
N4 = "flake8_broken_line:check_line_breaks"

[tool.poetry.dependencies]
python = "^3.7"

flake8 = ">=3.5,<6"
importlib-metadata = { version = "*", python = "<3.8" }

[tool.poetry.group.test.dependencies]
mypy = "^0.981"

pytest-cov = "^4.0"
pytest-randomly = "^3.10"
pytest = "^7.0"

flake8-print = "^4.0"
flake8-builtins = "^1.5"
flake8-commas = "^2.0"
flake8-quotes = "^3.2"
flake8-comprehensions = "^3.5"
flake8-docstrings = "^1.6"
flake8-string-format = "^0.3"
flake8-bugbear = "^22.9"
flake8-pep3101 = "^1.3"
flake8-debugger = "^4.0"
flake8-isort = "^4.2.0"
pep8-naming = "^0.13"

safety = "^2.2"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
