[tool.poetry]
name = "flake8-broken-line"
version = "1.0.0"
description = "Flake8 plugin to forbid backslashes for line breaks"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/flake8-broken-line"
homepage = "https://github.com/wemake-services/flake8-broken-line"

keywords = [
  "flake8",
  "flake8-plugin",
  "linting",
  "linter",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.plugins."flake8.extension"]
N4 = "flake8_broken_line:check_line_breaks"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = ">5"

[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

mypy = "^1.3"
safety = "^2.3"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
